--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = adafruit_feather_esp32s2_reversetft
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit MAX1704X@^1.0.2
+	adafruit/Adafruit NeoPixel@^1.11.0
+	adafruit/Adafruit TestBed@^1.10.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
+	adafruit/Adafruit TSL2591 Library@^1.4.3
